Add refresh token for Security purposes. Closes #115